<resources>
    <string name="app_name">UCI_CaCx</string>
    <string name="uci_cacx">UCI CaCx</string>
    <string name="app_sub_title">App that helps in data collection during the screening of cervical cancer</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="permissions_request">Permissions\' Request</string>
    <string name="permission_text">You are required to allow a few permissions for easy use of the app</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="welcome_cx">Welcome to UCI Cervical Cancer Screening app</string>
    <string name="what_you_can_do">What you can do</string>
    <string name="screen_patient">Screen Patient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_s_identification">Patient\'s Identification - 1</string>
    <string name="patient_s_identification_2">Patient\'s Identification - 2</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="identification_category">Identification Category</string>

    <string-array name="income">
        <item>Select one</item>
        <item>None</item>
        <item>Less than 250000 UGX</item>
        <item>250000 - 500000 UGX</item>
        <item>500000 - 1000000 UGX</item>
        <item>Above 1000000 UGX</item>
    </string-array>

    <string-array name="region">
        <item>Select one</item>
        <item>Northern Region</item>
        <item>Central Region</item>
        <item>Eastern Region</item>
        <item>Western Region</item>
    </string-array>

    <string-array name="education">
        <item>Select one</item>
        <item>Primary education</item>
        <item>Secondary education</item>
        <item>Tertiary eduction</item>
        <item>Undergraduate</item>
        <item>Non Formal education</item>
        <item>Uneducated</item>
    </string-array>

    <string-array name="marital">
        <item>Select one</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
        <item>Separated</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="religion">
        <item>Select one</item>
        <item>Catholic</item>
        <item>Anglican</item>
        <item>Islam</item>
        <item>Pentecostal</item>
        <item>Other Christian</item>
        <item>Seventh-day Adventist</item>
        <item>No religion</item>
    </string-array>

    <string-array name="employment">
        <item>Select one</item>
        <item>Construction</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Mining</item>
        <item>Tourism</item>
        <item>Engineering</item>
        <item>Informal</item>
        <item>Education</item>
        <item>Agriculture</item>
        <item>Retail</item>
        <item>Uniformed</item>
        <item>Not applicable</item>
        <item>other</item>
    </string-array>

    <string-array name="nok">
        <item>Select one</item>
        <item>Next of Kin: With decision-making rights on the health of the patient</item>
        <item>Contact Person: A person to contact in relation with the patient</item>
        <item>Unspecified: Unspecified contact person </item>
    </string-array>

    <string-array name="id_type">
        <item>Select one</item>
        <item>NIN</item>
        <item>Passport</item>
    </string-array>

    <string-array name="relationship">
        <item>Select one</item>
        <item>Aunt/Uncle</item>
        <item>Child</item>
        <item>Dependent</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Nice/Nephew</item>
        <item>Parent</item>
        <item>Sibling</item>
        <item>Spouse</item>
        <item>Supervisee</item>
        <item>Supervisor</item>
        <item>Other</item>
    </string-array>

    <string-array name="units">
        <item>Select one</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string-array name="contraceptives">
        <item>Select one</item>
        <item>Condoms</item>
        <item>Contraception method undecided</item>
        <item>Diaphragm</item>
        <item>Emergency contraceptive pills</item>
        <item>Female condom</item>
        <item>Female sterilization</item>
        <item>Hysterectomy</item>
        <item>IUD Contraception</item>
        <item>Implantable contraceptive (unspecified type)</item>
        <item>Injectable contraceptives</item>
        <item>Intrauterine device</item>
        <item>Lactational amenorrhea</item>
        <item>Levonorgestrel</item>
        <item>Male condom</item>
        <item>Medroxyprogesterone acetate</item>
        <item>Natural family planning</item>
        <item>Norplant (implantable contraceptive)</item>
        <item>Not applicable</item>
        <item>Oral contraception</item>
        <item>Other</item>
        <item>Sexual abstinence</item>
        <item>Tubal ligation procedure</item>
        <item>Unknown</item>
        <item>Vasectomy</item>
    </string-array>

    <string-array name="regimen">
        <item>Select one</item>
        <item>ABC-3TC-ATV/r</item>
        <item>ABC-3TC-EFV</item>
        <item>ABC-3TC-NVP</item>
        <item>ABC/3TC/DTG</item>
        <item>AZT-3TC-LPV/r</item>
        <item>AZT-DDI-LPV/r</item>
        <item>AZT/3TC/DTG</item>
        <item>OTHER FIRST LINE REGIMEN</item>
        <item>OTHER SECOND LINE REGIMEN</item>
        <item>OTHER SPECIFY</item>
        <item>TDF-3TC-ATV/r</item>
        <item>TDF-3TC-EFV</item>
        <item>TDF-3TC-LPV/r</item>
        <item>TDF-3TC-NVP</item>
        <item>TDF-DDI-LPV/R</item>
        <item>TDF-DDI-SQV/R</item>
        <item>TDF-FTC-EFV</item>
        <item>TDF-FTC-LPV/r</item>
        <item>TDF-FTC-NVP</item>
        <item>TDF/3TC/DTG</item>
    </string-array>

    <string-array name="contact">
        <item>Select one</item>
        <item>Live call from HW</item>
        <item>SMS</item>
        <item>Automated Attendant (IVR)</item>
    </string-array>

    <string-array name="using">
        <item>Select one</item>
        <item>Less than 6 months</item>
        <item>6 - 12 months</item>
        <item>More than 12 months</item>
    </string-array>

    <string-array name="screened">
        <item>Select one</item>
        <item>Cancer suspect</item>
        <item>Onset of menstrual periods</item>
        <item>No supplies/equipment</item>
        <item>Refused</item>
        <item>Infection of the cervix/vulva</item>
        <item>Other</item>
    </string-array>

</resources>