<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:fadeScrollbars="true"
        android:padding="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:fontFamily="@font/sora_semi_bold"
                android:textSize="@dimen/biggest"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/big"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/big"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_edit_text"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/small"
                android:hint="@string/enter_your_email_address"
                android:fontFamily="@font/sora_regular"
                android:textColorHint="@color/gray"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/big"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/primary_edit_text"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sora_regular"
                    android:inputType="textPassword"
                    android:textSize="@dimen/small"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:fontFamily="@font/sora_medium"
                android:textSize="@dimen/big"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:textColor="@color/blue"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/sign_in"
                    android:id="@+id/btnsign"
                    android:fontFamily="@font/sora_medium"
                    android:textSize="@dimen/biggest"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ProgressBar
                    android:id="@+id/login_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="@id/btnsign"
                    app:layout_constraintBottom_toBottomOf="@id/btnsign"
                    app:layout_constraintEnd_toEndOf="@id/btnsign"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>