<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Category">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/identification_category"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttons"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:fadeScrollbars="true"
            android:padding="20dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Patient Category *"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/big"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="National"
                        android:fontFamily="@font/sora_regular"
                        android:textSize="@dimen/small"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Refugee"
                        android:fontFamily="@font/sora_regular"
                        android:textSize="@dimen/small"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Foreigner"
                        android:fontFamily="@font/sora_regular"
                        android:textSize="@dimen/small"
                        android:textColor="@color/black"/>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/nin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/nin_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sora_regular"
                        android:textSize="@dimen/big"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/nin_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/primary_edit_text"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/small"
                        android:fontFamily="@font/sora_regular"
                        android:textColorHint="@color/gray"
                        android:autofillHints="emailAddress"
                        android:inputType="textCapCharacters"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="18dp"
                        android:paddingBottom="18dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/back"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/bigger"
                android:textColor="@color/blue"
                style="@style/Custom.OutlinedButton"
                android:backgroundTint="@color/light_blue"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:text="@string/next"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/bigger"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>