<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Patient.Identification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/patient_s_identification"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttons"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:fadeScrollbars="true"
            android:padding="20dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="First Name *"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/big"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_edit_text"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/small"
                    android:fontFamily="@font/sora_regular"
                    android:textColorHint="@color/gray"
                    android:inputType="textCapSentences"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Middle Name"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/big"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="This is optional"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/smaller"
                    android:textColor="@color/light_gray"/>

                <EditText
                    android:id="@+id/middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_edit_text"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/small"
                    android:fontFamily="@font/sora_regular"
                    android:textColorHint="@color/gray"
                    android:inputType="textCapSentences"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Last Name *"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/big"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_edit_text"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/small"
                    android:fontFamily="@font/sora_regular"
                    android:textColorHint="@color/gray"
                    android:inputType="textCapSentences"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="18dp"
                    android:paddingBottom="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Age *"
                    android:fontFamily="@font/sora_regular"
                    android:textSize="@dimen/big"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/select"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        style="@style/Custom.OutlinedButton"
                        android:backgroundTint="@color/light_blue"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="18dp"
                        android:paddingBottom="18dp"
                        android:textSize="@dimen/small"
                        android:fontFamily="@font/sora_regular"
                        android:textColorHint="@color/gray"
                        android:text="Select Date"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="OR"
                        android:fontFamily="@font/sora_semi_bold"
                        android:textSize="@dimen/biggest"
                        android:textColor="@color/gray"
                        android:gravity="center"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:background="@drawable/primary_edit_text"
                        android:textSize="@dimen/small"
                        android:fontFamily="@font/sora_regular"
                        android:textColorHint="@color/gray"
                        android:inputType="number"
                        android:hint="Enter Age"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingTop="18dp"
                        android:paddingBottom="18dp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>



            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/back"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/bigger"
                android:textColor="@color/blue"
                style="@style/Custom.OutlinedButton"
                android:backgroundTint="@color/light_blue"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:text="@string/next"
                android:fontFamily="@font/sora_regular"
                android:textSize="@dimen/bigger"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>